@@ -5,6 +5,9 @@ Griffith ChangeLog
 (c) 2005-2012  Vasco Nunes, Piotr Ożarowski
 
 
+2012-12-29  Michael Jahn
+	* remove movie plugin FilmDb (site doesn't exists anymore)
+
 2012-12-16  Michael Jahn
 	* fixed backup for databases other than sqlite
 
